# dueros-smarthome

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/dueros_smarthome/: client.py  const.py  models.py
src/duerossmarthome/: const.py  models.py  smart_home_client.py
